# lightweight-collections

./: .gitignore  CMakeLists.txt  Kconfig  idf_component.yml  lcl_alg.c  lcl_bitvect.c  lcl_btree_map.c  lcl_cqueue.c  lcl_err.c  lcl_hash.c  lcl_hmap.c  lcl_list.c  lcl_mpool.c  lcl_rc.c  lcl_string.c  lcl_vect.c
include/: lcl_alg.h  lcl_allocators.h  lcl_any.h  lcl_arch.h  lcl_bitvect.h  lcl_btree_map.h  lcl_cqueue.h  lcl_err.h  lcl_hash.h  lcl_hmap.h  lcl_list.h  lcl_mpool.h  lcl_rc.h  lcl_string.h  lcl_vect.h
private/: lcl_util.h
tests/: a.out  test.sh  test_list.c  test_string.c  test_vect.c
unit-test/: unit-cqueue.c  unit-hmap.c  unit-list.c  unit-main.c  unit-mpool.c  unit-str.c  unit-vect.c  units.h
